--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - "lts/*"
   - "node"
 before_install:
-    - npm instal test
+    - npm install test
     - npm install mocha -g
     - npm install mocha --save-dev
     - npm install --save-dev supertest
