--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,5 @@ node_js:
   - "node"
 before_install:
     - npm install mocha -g
-    - npm install mocha --save-dev
-    - npm install --save-dev supertest
 after_success: 
-    - 'mocha probar.js'
+    - 'mocha testear.js '
