--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -4,27 +4,29 @@
     gather_facts: false
 
     tasks:
-    - name: Instalar git y curl
+    - name: Se instala curl y git
       apt:
         name: ['git', 'curl']
         state: present
         update_cache: yes
 
-    - name: Descargar ProyectoCC de GitHub
+    - name: Descargar nuestro proyecto_cc de GitHub
       git:
         repo: https://github.com/jrtrillo/proyecto_cc.git
         dest: ./proyecto_cc
 
-    - name: Instalar dependencias de package.json
+    - name: Instalar NPM que es independencia de package.json
       raw: cd proyecto_cc; npm install
+
+    - name: Instala NodeJS Process Manager
+      npm: name=pm2 executable=/usr/bin/npm global=yes
 
     - name: Descarga NodeJS
       raw: curl -sL https://deb.nodesource.com/setup_11.x | sudo -E bash -
 
-    - name: Instala NodeJS¡
+    - name: Instala NodeJS
       apt: name=nodejs
 
-    - name: Instala NodeJS Process Manager
-      npm: name=pm2 executable=/usr/bin/npm global=yes
+
 
     
