--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -4,29 +4,38 @@
     gather_facts: false
 
     tasks:
-    - name: Se instala curl y git
+    - name: Se instala git
       apt:
-        name: ['git', 'curl']
+        name: ['git']
         state: present
         update_cache: yes
 
-    - name: Descargar nuestro proyecto_cc de GitHub
+    - name: Se instala curl
+      apt:
+        name: ['curl']
+        state: present
+        update_cache: yes
+
+    - name: Se descarga GitHub del repositorio de Jose Ramón Trillo Vílchez
       git:
         repo: https://github.com/jrtrillo/proyecto_cc.git
         dest: ./proyecto_cc
 
-    - name: Instalar NPM que es independencia de package.json
-      raw: cd proyecto_cc; npm install
-
-    - name: Instala NodeJS Process Manager
+    - name: Se instala NodeJS Process Manager (PM2)
       npm: name=pm2 executable=/usr/bin/npm global=yes
 
-    - name: Descarga NodeJS
-      raw: curl -sL https://deb.nodesource.com/setup_11.x | sudo -E bash -
+    - name: Se instala las dependencias del package.json
+      raw: cd proyecto_cc; npm install
 
-    - name: Instala NodeJS
-      apt: name=nodejs
+    - name: Se descarga NodeJS
+      become: yes
+      shell: curl -sL https://deb.nodesource.com/setup_11.x | sudo -E bash -
+      args: 
+        warn: no
 
+    - name: Se instala NodeJS
+      become: yes
+      apt: pkg=nodejs state=latest
 
-
+    
     
