--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 before_install:
     - npm install mocha -g
 after_success: 
-    - 'mocha testear.js '
+    - 'mocha testear.js --exit'
     
 deploy:
   provider: heroku
