--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ node_js:
   - "node"
 before_install:
     - npm install mocha -g
+    npm install --save-dev supertest 
 after_success: 
     - 'mocha testear.js --exit'
