--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ node_js:
   - node
 before_install:
     - npm install mocha -g
+    - npm install mongodb --save
+    - npm install mongoose validator
 script: 
     - mocha testear.js --exit 
