--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
   "name": "proyecto",
   "version": "1.0.0",
-  "description": "",
+  "description": "[![Status](https://img.shields.io/badge/Status-Documenting-blue.svg)](https://github.com/jrtrillo/proyecto_cc/blob/master/README.md)\r [![DBMS](https://img.shields.io/badge/DBMS-MongoDB-green.svg)](https://www.mongodb.com/es)\r [![Language](https://img.shields.io/badge/Language-Node-pink.svg)](https://nodejs.org/en/)\r [![License](https://img.shields.io/badge/License-GPL-purple.svg)](https://github.com/jrtrillo/proyecto_cc/blob/master/LICENSE)",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha testear.js"
+    "test": "mocha testear.js --exit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.4.4",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
     "supertest": "^3.3.0"
-  }
+  },
+  "directories": {
+    "doc": "doc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jrtrillo/proyecto_cc.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/jrtrillo/proyecto_cc/issues"
+  },
+  "homepage": "https://github.com/jrtrillo/proyecto_cc#readme"
 }
