--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -20,6 +20,34 @@
       become: yes
       apt: pkg=nodejs state=present
 
+     - name: Clave pública MongoDB
+      become: yes
+      shell: apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 9DA31620334BD75D9DCB49F368818C72E52529D4
+
+    - name: Repositorio de Mongo
+      become: yes
+      become_method: sudo
+      lineinfile:
+        line: "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/4.0 multiverse"
+        dest: /etc/apt/sources.list.d/mongodb-org-4.0.list
+        state: present
+        create: yes
+
+    - name: Instalar MongoDB
+      become: yes
+      become_method: sudo
+      apt:
+        name: mongodb-org
+        state: present
+        update_cache: yes
+
+    - name: Inicia servicio de MongoDB
+      become: yes
+      become_method: sudo
+      service:
+        name: mongod
+        state: started
+
     - name: Se descarga GitHub del repositorio de Jose Ramón Trillo Vílchez
       git:
         repo: https://github.com/jrtrillo/proyecto_cc.git
